--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
-    "GMEEK_VERSION":"last"
+    "title":"Antlers's Blog",
+    "subTitle":"Hi~ 这里是「玹羽」Antlers，是真真真真真的社恐！交给宿命吧，我们会认识的！️",
+    "avatarUrl":"https://github.com/antlers12/antlers12.github.io/blob/main/img/avatar.png",
+    "GMEEK_VERSION":"main"
 }
