--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
     "title":"Antlers's Blog",
     "subTitle":"Hi~ 这里是「玹羽」Antlers，是真真真真真的社恐！交给宿命吧，我们会认识的！️",
-    "avatarUrl":"https://github.com/antlers12/antlers12.github.io/blob/main/img/32813630994.svg",
-    "GMEEK_VERSION":"main"
+    "avatarUrl":"https://github.com/antlers12/antlers12.github.io/raw/main/img/avatar.png",
+    "GMEEK_VERSION":"last"
+    "style": "<style>#postBody img {display: block; margin-left: auto; margin-right: auto;}</style>"
 }
